k8s/tasks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-service
  namespace: studyboard
  labels:
    app: tasks-service
spec:
  type: ClusterIP
  selector:
    app: tasks-service
  ports:
    - name: http
      port: 80
      targetPort: http
